# Workflow-Coordination-Engine

./: .env.example  .gitignore  .txt  Dockerfile  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
apps/api/: celery_app.py  config.py  logging_conf.py  main.py  schemas.py
apps/api/db/: __init__.py  models.py  session.py
apps/api/routers/: document_intelligence.py  observability.py  workflows.py
apps/api/services/: workflow_repository.py
apps/web/: README.md  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/audit/: page.tsx
apps/web/app/document-intelligence/new/: page.tsx
apps/web/app/failures/: page.tsx
apps/web/app/queues/: page.tsx
apps/web/app/workflows/: page.tsx
apps/web/app/workflows/[id]/: page.tsx
apps/web/components/: AutoRefresh.tsx  Sidebar.tsx  Topbar.tsx
apps/web/lib/: config.ts
docs/architecture/: overview.md
docs/decisions/: 0001-skeleton.md
docs/workflows/: booking.md
infrastructure/docker/: Dockerfile
infrastructure/nginx/: README.md
scripts/: README.txt
services/notification_service/: tasks.py
services/retry_service/: tasks.py
services/workflow_engine/: tasks.py
