[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workflow-coordination-engine"
version = "0.1.0"
description = "Operational workflow orchestration layer (FastAPI, PostgreSQL, Redis, Celery)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "celery[redis]>=5.3",
    "fastapi>=0.115",
    "psycopg[binary]>=3.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "structlog>=24.4",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "services*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
